--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+backports.functools-lru-cache==1.5
 backports.shutil-get-terminal-size==1.0.0
 backports.weakref==1.0.post1
 bleach==1.5.0
+cycler==0.10.0
 decorator==4.3.0
 enum34==1.1.6
 funcsigs==1.0.2
@@ -8,27 +10,36 @@ futures==3.2.0
 html5lib==0.9999999
 ipython==5.8.0
 ipython-genutils==0.2.0
+kiwisolver==1.0.1
 Markdown==3.0
+matplotlib==2.2.3
 mock==2.0.0
+nose==1.3.7
 numpy==1.15.1
+olefile==0.46
 opencv-python==3.4.3.18
 pathlib2==2.3.2
 pbr==4.2.0
 pexpect==4.6.0
 pickleshare==0.7.5
+Pillow==5.1.1
 prompt-toolkit==1.0.15
 protobuf==3.6.1
 ptyprocess==0.6.0
 Pygments==2.2.0
+pyparsing==2.1.10
 python-dateutil==2.7.5
+pytz==2017.2
 scandir==1.9.0
 scikit-learn==0.20.0
 scipy==1.1.0
 simplegeneric==0.8.1
 six==1.11.0
 sklearn==0.0
+subprocess32==3.2.6
 tensorflow-gpu==1.4.1
 tensorflow-tensorboard==0.4.0
 traitlets==4.3.2
+virtualenv==16.0.0
 wcwidth==0.1.7
 Werkzeug==0.14.1
