--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,13 @@
 *.xlsx
 *.nb.html
 **/.ipynb_checkpoints
+**/sports1m_finetuning_ucf101.model
 ucf101/**/*.txt
 c3d-tensorflow/visual_logs/*
 c3d-tensorflow/list/*.txt
-ucf101/C3D-tensorflow-master/sports1m_finetuning_ucf101.model
 ucf101/C3D-tensorflow-master/models/*
 ucf101/C3D-tensorflow-master/saved_models/*
 ucf101/C3D-tensorflow-master/visual_logs/*
+ucf101_all_frames/C3D-tensorflow-master/models/*
+ucf101_all_frames/C3D-tensorflow-master/saved_models/*
+ucf101_all_frames/C3D-tensorflow-master/visual_logs/*
