--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,8 @@
 **/.ipynb_checkpoints
 **/sports1m_finetuning_ucf101.model
 ucf101/**/*.txt
-c3d-tensorflow/visual_logs/*
-c3d-tensorflow/list/*.txt
+**/visual_logs/*
+hmdb51/c3d-tensorflow/list/*.txt
 ucf101/C3D-tensorflow-master/models/*
 ucf101/C3D-tensorflow-master/saved_models/*
 ucf101/C3D-tensorflow-master/visual_logs/*
